fixing footer gap (#1957)

--- a/scenes/dorf/dorf-scene.scss
+++ b/scenes/dorf/dorf-scene.scss
@@ -488,7 +488,7 @@ $toolbar-size: 64px;
     z-index: $base-background-z-index;
     position: relative;
     background: url(img/footer-snow-tile.svg) center bottom repeat-x;
-    background-size: 800px;
+    background-size: 100% 100%;
     min-height: 200px;
     margin-top: -200px;  // nb: removed on mobile
 
